2009-09-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Add method for executing a batch of statements/transactions and
	returning any failed statements/transactions to they can be
	re-done.  Also add methods to manipulate the statements in a
	transaction so we can retry things intelligently.

2008-11-12 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Add support for tracking the number of consecutive connection failures
	and imposing a delay between connection attempts.
	* JDBC.m: fix typo
	* GNUMmakefile: bump version

2008-07-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Documented the --with-additional-include=,
	--with-additional-lib=, --with-postgres-dir= and
	--with-jre-architecture= options.
	* configure: Regenerated.
	* config.h.in: Regenerated.
	
2008-03-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	* ECPG.pgm:
	* MySQL.m:
	* Postgres.m:
	* SQLite.m:
	* JDBC.m:
	Alter to allow control of both the way records are strored and
	the way they are listed ... so people can make performance
	optimisations.

2008-02-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h:
	* SQLClient.m:
	Experimental new method to set a thread to do all cached
	queries on and to perform asynchronous updates if other
	threads request information which is in the cache but
	past its expiry date.  Should allow threads to use
	config information from a database without blocking
	unnecessarily.

2008-02-15 Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: Fix memory leak when executing transaction.

2007-10-23 Richard Frith-Macdonald  <rfm@gnu.org>

	Postgres.m: Use E'...' syntax for bytea if it is available.

2007-09-14 Richard Frith-Macdonald  <rfm@gnu.org>

	Update to LGPL3

2007-07-21 Richard Frith-Macdonald  <rfm@gnu.org>

        * SQLClient.m: Fix retasin bug copying transactions.
	* JDBC.m: Update for new batch code

2007-07-09 Richard Frith-Macdonald  <rfm@gnu.org>
